# Citegeist

./: .env.example  README.md  pyproject.toml  venues.json
bib_checker/: __init__.py  checker.py  cli.py  datatypes.py  parser.py  report.py  search.py  strings.py  writer.py
tests/: conftest.py  test_checker.py  test_parser.py  test_search.py  test_strings.py  test_writer.py
tests/fixtures/: arxiv_upgrade.bib  bad.bib  good.bib
