[project]
name = "bib-checker"
version = "0.1.0"
description = "Check, standardize, and upgrade BibTeX reference files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bib-check = "bib_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bib_checker"]

[dependency-groups]
dev = [
    "pytest>=8",
]
